[package]
name = "might-be-minified"
version = "0.3.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
keywords = ["javascript"]
description = "Qualified guesswork for telling minified javascript from regular javascript"
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/mitsuhiko/might-be-minified"
documentation = "https://docs.rs/might-be-minified"
edition = "2018"

[dependencies]
regex = "1.1.0"
lazy_static = "1.2.0"
